--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,3 +1,54 @@
-h1 {
-  color: green;
+li {
+  list-style: none;
+}
+
+.team-box {
+  border: 3px solid black;
+  width: 200px;
+  &.teamPool {
+    background-color: #b99abe;
+    float: left;
+  }
+  &.userTeam {
+    background-color: #9dbcf3;
+    float: right;
+  }
+   &.otherTeam {
+    background-color: #8483a2;
+    float: left;
+    margin-left: 200px;
+  }
+  .team-list {
+    padding: 0;
+  }
+  .school {
+    border: 1px solid black;
+    width: 100%;
+    :hover {
+      background-size: 100%;
+      background-color: #e7ceeb;
+      .userTeam &{
+        background-color: #c4d3ef;
+      }
+    }
+    a {
+      padding: 12px;
+      text-align: center;
+      text-decoration: none;
+      display: block;
+      line-height: 5px;
+      .userTeam &{
+        height: 10px;
+      }
+    }
+  }
+}
+
+.bracket {
+  background-image: url('/images/bracket.gif');
+  background-size: 100%;
+  height: 300px;
+  width: 300px;
+  float: right;
+  position: relative;
 }
