--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -61,3 +61,26 @@ li {
 
   }
 }
+.chat-window {
+  position: relative;
+  height: 300px;
+  width: 500px;
+  background-color: #d3d3d3;
+  clear: left;
+
+  .messages {
+    overflow: auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 280px;
+    border: 1px solid black;
+  }
+
+  .typeMessage {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 18px;
+  }
+}
