--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -75,6 +75,15 @@ li {
     width: 100%;
     height: 280px;
     border: 1px solid black;
+    .message-user {
+      display: inline-block;
+      color: red;
+    }
+    .message-content{
+      display: inline-block;
+      color: blue;
+      margin-left: 5px;
+    }
   }
 
   .typeMessage {
