adds ranking to db models

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -34,7 +34,7 @@ li {
     }
     a {
       padding: 12px;
-      text-align: center;
+      text-align: left;
       text-decoration: none;
       display: block;
       line-height: 5px;
