--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -9,7 +9,7 @@ li {
 .team-box {
   border: 3px solid black;
   width: 230px;
-  max-height: 600px;
+  max-height: 400px;
   overflow: auto;
   &.teamPool {
     background-color: #b99abe;
@@ -47,8 +47,9 @@ li {
       text-decoration: none;
       display: block;
       line-height: 5px;
-      .userTeam &{
+      .userTeam &   {
         height: 10px;
+        padding-top: 0;
       }
     }
   }
