--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -82,14 +82,19 @@ td {
     width: 100%;
     height: 280px;
     border: 1px solid black;
+
+    ul {
+      margin-top: 40px;
+    }
     .message-user {
       display: inline-block;
       color: red;
+      margin: 2px 0;
     }
     .message-content{
       display: inline-block;
       color: blue;
-      margin-left: 5px;
+      margin: 2px 5px;
     }
   }
 
