--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -74,14 +74,15 @@ td {
   width: 500px;
   background-color: #d3d3d3;
   clear: left;
+  border: 1px solid black;
 
   .messages {
     overflow: auto;
     position: absolute;
-    top: 0;
+    top: 50px;
     width: 100%;
-    height: 280px;
-    border: 1px solid black;
+    height: 220px;
+    border-bottom: 1px solid black;
 
     ul {
       margin-top: 40px;
