--- a/client/styles/nav.scss
+++ b/client/styles/nav.scss
@@ -1,6 +1,31 @@
 nav {
+
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -ms-transform: translateX(-50%); /* IE 9 */
+  -webkit-transform: translateX(-50%); /* Chrome, Safari, Opera */
+  transform: translateX(-50%);
+  background-color: #8483a2;
+
+  ul {
+    height: 60px;
+    padding: 0;
+    margin: 0;
+  }
+
   li {
+    height: 18px;
     display: inline-block;
-    margin: 0 10px;
+    padding: 20px 10px;
+    border: 1px solid black;
+
+    a {
+      text-decoration: none;
+      color: white;
+      font-size: 18px;
+      line-height: 18px;
+    }
   }
 }
